# time-reporting-tool

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
django_app/: admin.py  constants.py  models.py  urls.py  utils.py  views.py
django_app/migrations/: 0001_initial.py  0002_workhour.py  0003_alter_workhour_options_alter_workhour_hours.py  0004_worktag_delete_tags_workhour_tag.py  0005_remove_workhour_hours_workhour_end_time_and_more.py  0006_machine_machineworklog.py  0007_alter_machineworklog_unique_together.py
django_app/static/css/: dashboard.css
django_app/templates/: admin_buttons.html  admin_dashboard.html  admin_employer_report.html  admin_machines_report.html  admin_monthly_report.html  base.html  home.html  login.html  user_dashboard.html
django_app/templatetags/: format_hours.py  get_item.py
django_app/tests/: test_admin_dashboard.py  test_employer_report.py  test_login_view.py  test_machines_report.py  test_models.py  test_monthly_report.py  test_user_dashboard.py
timeloggingproject/: asgi.py  settings.py  urls.py  wsgi.py
