[project]
name = "time-logger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.8",
    "gunicorn>=23.0.0",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.6",
    "whitenoise>=6.6.0"
]
